# tess-variable-star-classifier

./: .gitignore  README.md  app.py  download_real_tess_sample.py  prepare_dataset.py  pyproject.toml  requirements.txt  seed_local_dataset.py  train.py
data/: README.md  dataset_summary.json
data/tess_curated/: README.md  manifest.csv
data/tess_curated/delta_scuti/: delta_scuti_001.csv  delta_scuti_002.csv  delta_scuti_003.csv  delta_scuti_004.csv  wasp_33_sector_18.csv  wasp_33_sector_58.csv  wasp_33_sector_85.csv
data/tess_curated/eclipsing_binary/: algol_sector_18.csv  algol_sector_58.csv  algol_sector_85.csv  eclipsing_binary_001.csv  eclipsing_binary_002.csv  eclipsing_binary_003.csv  eclipsing_binary_004.csv
data/tess_curated/quiet_star/: hd_209458_sector_56.csv  hd_209458_sector_82.csv  quiet_star_001.csv  quiet_star_002.csv  quiet_star_003.csv  quiet_star_004.csv
docs/: PROJECT_OVERVIEW.md
src/tess_classifier/: __init__.py  config.py  data.py  features.py  train.py
